version 1.0.3 (not yet released)
           * fix bug in drawparallels that results in 'KeyError' when drawing
             parallels very close together (0.1 degrees).
           * fix constant in Robinson projection (update PJ_robin.c
             from proj4 svn).
           * fix typo in setup.py (replace "!= ['sdist','clean']" with
             "not in ['sdist','clean']").
           * make sure drawmeridians can handle wrap-around (so that
             if projection is defined in -180 to 0 and user asks for
             meridians from 180 to 360 to be drawn, it should work).
             Only affects projections 'mill','gall','merc' and 'cyl'.

version 1.0.2 (git tag v1.0.2)
           * update include geos from 3.2.0 to 3.3.1 so it compiles with gcc
             4.6.
           * added colorbar method that uses axes_grid toolkit to
             create colorbar axes.
           * replace hasattr(arr,'mask') with numpy.ma.isMA(arr).
           * docs updated, moved to matplotlib.github.com/basemap.
           * added optional 1.25, 2.5 and 10 minute land/sea masks (derived from
             GSHHS coastline data). 'resolution'
             and 'grid' kwargs added to drawlsmask and maskoceans.
             'resolution' can be 'c','l','i','h' or 'f', grid can be 1.25,2.5,5 or 10.
           * update shapefile.py from pyshp.googlecode.com to r72.
           * change default land-sea mask (now derived directly from gshhs
             coastline data, default is 5 minutes use coastline resolution =
             'l'). Default for plotting lakes is now True.
           * add etopo method (similar to bluemarble, but plots etopo 
             relief image from www.ngdc.noaa.gov/mgg/global as a map background).
           * add shadedrelief method (similar to bluemarble, but plots shaded
             relief image from naturalearthdata.com as a map background).
           * replace pyshapelib with pure python shapelib.py from