@@ -1,4 +1,6 @@
 version 1.0.3 (not yet released)
+           * bug fixes for celestial projections, and non-standard sphere
+             radii (https://github.com/matplotlib/basemap/pull/6).
            * fix bug in drawparallels that results in 'KeyError' when drawing
              parallels very close together (0.1 degrees).
            * fix constant in Robinson projection (update PJ_robin.c
